Release V2 testnet platform
